# ai-office

./: .gitignore  CLAUDE.md  SETUP.md  TODOS.md  package-lock.json  start.sh  stop.sh
server/: .env.example  README.md  main.py  mypy.ini  pyproject.toml  serve.sh
server/agents/: designer.md  developer.md  planner.md  qa.md
server/bus/: message_bus.py  payloads.py  schemas.py
server/config/: team.py
server/core/: paths.py
server/db/: client.py  daily_quote_store.py  job_store.py  log_store.py  suggestion_store.py  task_store.py  workreport_store.py
server/harness/: code_runner.py  color_utils.py  export_engine.py  file_reader.py  html_tools.py  html_validator.mjs  output_templates.py  pdf_converter.py  pdf_printer.mjs  rejection_analyzer.py  screenshot.mjs  site_builder.py  stitch_bridge.js  stitch_bridge.mjs  stitch_client.py  tool_registry.py
server/improvement/: __init__.py  analyzer.py  auto_apply.py  code_patcher.py  engine.py  metrics.py  persona_drift.py  persona_guard.py  prompt_evolver.py  qa_adapter.py  workflow_optimizer.py
server/jobs/: cross_review.py  gate_ai.py  job_planner.py  models.py  playbook.py  prompt_composer.py  registry.py  runner.py  step_configurator.py  tool_registry.py
server/log_bus/: event_bus.py
server/memory/: __init__.py  agent_memory.py  team_memory.py
server/orchestration/: __init__.py  agent.py  agent_interactions.py  autonomous_loop.py  conversation_quality.py  discovery.py  expertise.py  intent.py  job_handler.py  loop.py  meeting.py  office.py  persona_drift.py  phase_registry.py  project_runner.py  router.py  state.py  suggestion_filer.py  task_graph.py  teamlead_review.py  trend_research.py  user_input.py
server/routes/: admin.py  artifacts.py  autonomous.py  components.py  jobs.py  logs.py  playbooks.py  search.py  suggestion_branch.py  suggestions.py  tasks.py  team.py  topics.py  workreport.py
server/runners/: claude_runner.py  cost_tracker.py  gemini_runner.py  gemma_runner.py  groq_runner.py  json_parser.py  model_router.py  ollama_runner.py  opencode_runner.py
server/scripts/: gen_openapi.py
server/tests/: conftest.py  test_agent_memory.py  test_agents.py  test_archive_loop_resilience.py  test_auto_apply_prompt_rule.py  test_autonomous_loop_state.py  test_autonomous_topic_blocklist.py  test_chat_logs_archive.py  test_claude_runner.py  test_code_patcher_backoff.py  test_code_patcher_integration.py  test_code_patcher_scope.py  test_commitment_filing.py  test_filer_mode_gates.py  test_free_request.py  test_improvement.py  test_jobs_pipeline.py  test_json_parser.py  test_log_bus.py  test_mention_routing.py  test_message_bus.py  test_message_bus_archive.py  test_message_routing.py  test_ollama_runner.py  (+20 more)
(+187 files in other folders)
